tests/testing_data/anonymized_testing_data/invalid_data/invalid_fields/noSeriesNum.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:94870e228f28b52613d6e2f9b81d3bdf3a506dcf9313738c57f0b5841caf4ac0
size 64870
